web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.27.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: web
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: web
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.27.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: web
    spec:
      containers:
        - args:
            - bash
            - -c
            - "alembic upgrade head && uvicorn main:app --host 0.0.0.0 --port 8080 --reload"
          image: "web:latest_52"
          imagePullPolicy: Never
          name: web
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
